--- a/MQUESTSYS.BF/MQUESTSYS.BF.csproj
+++ b/MQUESTSYS.BF/MQUESTSYS.BF.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Master\CustomerBFC.cs" />
+    <Compile Include="Master\LogSendEmailBFC.cs" />
     <Compile Include="PSIGenericTransactionBFC.cs" />
     <Compile Include="Master\CompanySettingBFC.cs" />
     <Compile Include="Master\PrefixSettingBFC.cs" />
