--- a/MQUESTSYS.EDM/App.Config
+++ b/MQUESTSYS.EDM/App.Config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="MQUESTSYSEntities" connectionString="metadata=res://*/MQUESTSYSEDMC.csdl|res://*/MQUESTSYSEDMC.ssdl|res://*/MQUESTSYSEDMC.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-E00PLKJ\SQLSERVER2012;initial catalog=MQUESTSYS;user id=sa;password=tiar1!@#;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MQUESTSYSEntities" connectionString="metadata=res://*/MQUESTSYSEDMC.csdl|res://*/MQUESTSYSEDMC.ssdl|res://*/MQUESTSYSEDMC.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WS020104\SQLEXPRESS;initial catalog=mquestsys;user id=sa;password=12345;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
