--- a/MQUESTSYS/Web.config
+++ b/MQUESTSYS/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="MQUESTSYSEntities" connectionString="metadata=res://*/MQUESTSYSEDMC.csdl|res://*/MQUESTSYSEDMC.ssdl|res://*/MQUESTSYSEDMC.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-E00PLKJ\SQLSERVER2012;initial catalog=MQUESTSYS;user id=sa;password=tiar1!@#;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ApplicationServices" connectionString="data source=DESKTOP-E00PLKJ\SQLSERVER2012;initial catalog=MQUESTSYS;user id=sa;password=tiar1!@#;multipleactiveresultsets=True;App=EntityFramework;" providerName="System.Data.SqlClient" />
+    <add name="MQUESTSYSEntities" connectionString="metadata=res://*/MQUESTSYSEDMC.csdl|res://*/MQUESTSYSEDMC.ssdl|res://*/MQUESTSYSEDMC.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WS020104\SQLEXPRESS;initial catalog=MQUESTSYS;user id=sa;password=12345;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ApplicationServices" connectionString="data source=WS020104\SQLEXPRESS;initial catalog=MQUESTSYS;user id=sa;password=12345;multipleactiveresultsets=True;App=EntityFramework;" providerName="System.Data.SqlClient" />
     <!--<add name="MQUESTSYSConnectionString" connectionString="data source=LAPTOP1\SQLEXPRESS2012;initial catalog=MQUESTSYS;Integrated Security=True;multipleactiveresultsets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
