--- a/MQUESTSYS.Models/MQUESTSYS.Models.csproj
+++ b/MQUESTSYS.Models/MQUESTSYS.Models.csproj
@@ -47,8 +47,8 @@
     <Compile Include="HomeNotificationDetailModel.cs" />
     <Compile Include="HomeNotificationModel.cs" />
     <Compile Include="Master\CustomerModel.cs" />
-    <Compile Include="Report\AccountingResultModel.cs" />
     <Compile Include="Master\CompanySettingModel.cs" />
+    <Compile Include="Master\LogSendEmailModel.cs" />
     <Compile Include="Master\PrefixSettingModel.cs" />
     <Compile Include="Master\UserProfileModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -57,7 +57,6 @@
     <Compile Include="Master\UserModel.cs" />
     <Compile Include="PSIDetailModel.cs" />
     <Compile Include="PSIHeaderModel.cs" />
-    <Compile Include="Report\MonthlyDataModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MQUESTSYS.Util\MQUESTSYS.Util.csproj">
@@ -65,7 +64,9 @@
       <Name>MQUESTSYS.Util</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Report\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
